Changes made for displaying  events hierarchy at EventsGrid.
SVN-Revision: 27859